; ModuleID = '/home/carl/AnghaBench/nodemcu-firmware/app/lua/extr_lrotable.c_luaR_getmeta.c'
source_filename = "/home/carl/AnghaBench/nodemcu-firmware/app/lua/extr_lrotable.c_luaR_getmeta.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @luaR_getmeta(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  %4 = load i32*, i32** %2, align 8
  %5 = call i32* @luaR_findentry(i32* %4, i32* null, i32* null)
  store i32* %5, i32** %3, align 8
  %6 = load i32*, i32** %3, align 8
  %7 = icmp ne i32* %6, null
  br i1 %7, label %8, label %15

8:                                                ; preds = %1
  %9 = load i32*, i32** %3, align 8
  %10 = call i64 @ttisrotable(i32* %9)
  %11 = icmp ne i64 %10, 0
  br i1 %11, label %12, label %15

12:                                               ; preds = %8
  %13 = load i32*, i32** %3, align 8
  %14 = call i8* @rvalue(i32* %13)
  br label %16

15:                                               ; preds = %8, %1
  br label %16

16:                                               ; preds = %15, %12
  %17 = phi i8* [ %14, %12 ], [ null, %15 ]
  ret i8* %17
}

declare dso_local i32* @luaR_findentry(i32*, i32*, i32*) #1

declare dso_local i64 @ttisrotable(i32*) #1

declare dso_local i8* @rvalue(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
